--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,12 @@
 <html>
 	<head>
 		<title>My Webpage</title>
+		<style type="text/css">
+			table, th,td{
+				border:2px solid black;border-collapse:collapse;
+			}
+			th,td{padding: 5px;}
+		</style>
 	</head>
 	<body>
 		<h1 style="color:blue;text-align:center;">Welcome to My Webpage</h1>
@@ -13,5 +19,31 @@
 
 			<button>submit</button>
 		</form>
+		<ul>
+			<li>one</li>
+			<li>two</li>
+			<li>three</li>
+		</ul>
+		<img src="Miu on Twitter.jpg" height="300">
+		<br>
+		<p>This is a paragraph.</p>
+		<h5>this is a table:</h5>
+		<table>
+			<tr>
+				<th>name</th>
+				<th>favorite color</th>
+				<th>favorite sport</th>
+			</tr>
+			<tr>
+				<td>adam</td>
+				<td>green</td>
+				<td>football</td>
+			</tr>
+			<tr>
+				<td>julia</td>
+				<td>brown</td>
+				<td>tennis</td>
+			</tr>
+		</table>
 	</body>
 </html>
